implemented the service layers & registration api
